examples/test/testpolicy18401.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18401
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key0: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value15
          key10: value34
      podSelector:
        matchLabels:
          key3: value23
          key44: value18
